tests/files/lexer_tests/should_fail/050.cmdr
// Illegal character in variable name (ascii 17)
myvar = 17;